--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "firebase": "^10.13.2",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
