--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^4.4.4",
     "firebase": "^10.13.2",
+    "framer-motion": "^11.9.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
