--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "recharts": "^2.12.7",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
