--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "expense-tracky",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,23 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "chart.js": "^4.4.4",
-    "firebase": "^10.13.2",
-    "framer-motion": "^11.9.0",
-    "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "recharts": "^2.12.7",
-    "tailwind": "^4.0.0"
+    "next": "14.2.13"
   },
   "devDependencies": {
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "eslint": "^8",
+    "eslint-config-next": "14.2.13"
   }
 }
