--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^4.4.4",
     "firebase": "^10.14.0",
     "next": "14.2.13",
     "react": "^18",
